--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,3 +20,4 @@ testcontainers-junit-jupiter = { module = "org.testcontainers:testcontainers-jun
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+kotlinx-kover = { id = "org.jetbrains.kotlinx.kover", version = "0.9.1" }
