--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
 group=io.skjaere
-version=0.1.0 # x-release-please-version
+# x-release-please-start-version
+version=0.1.0
+# x-release-please-end
 kotlin.code.style=official
