--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,8 +13,8 @@ kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-c
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit" }
-rapidyenc = { module = "com.github.skjaere:rapidyenc-kotlin-wrapper", version = "v0.1.0" }
-mock-nntp-testcontainer = { module = "io.skjaere.mocknntp:testcontainer", version = "0.1.0" }
+rapidyenc = { module = "com.github.skjaere:rapidyenc-kotlin-wrapper", version = "v0.1.3" }
+mock-nntp-testcontainer = { module = "com.github.skjaere:mock-nntp-server", version = "v0.1.9" }
 testcontainers = { module = "org.testcontainers:testcontainers", version.ref = "testcontainers" }
 testcontainers-junit-jupiter = { module = "org.testcontainers:testcontainers-junit-jupiter", version.ref = "testcontainers" }
 
