--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ ktor = "3.4.0"
 junit = "5.11.4"
 kotlinx-coroutines = "1.10.1"
 testcontainers = "2.0.3"
+micrometer = "1.14.4"
 
 [libraries]
 ktor-network = { module = "io.ktor:ktor-network", version.ref = "ktor" }
@@ -15,6 +16,7 @@ kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotl
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit" }
 slf4j-api = { module = "org.slf4j:slf4j-api", version = "2.0.16" }
 rapidyenc = { module = "com.github.skjaere:rapidyenc-kotlin-wrapper", version = "v0.1.3" }
+micrometer-core = { module = "io.micrometer:micrometer-core", version.ref = "micrometer" }
 mock-nntp-testcontainer = { module = "com.github.skjaere:mock-nntp-server", version = "v0.1.0" }
 testcontainers = { module = "org.testcontainers:testcontainers", version.ref = "testcontainers" }
 testcontainers-junit-jupiter = { module = "org.testcontainers:testcontainers-junit-jupiter", version.ref = "testcontainers" }
